--- a/notebooks/bot_tests.ipynb
+++ b/notebooks/bot_tests.ipynb
@@ -15,13 +15,28 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": ["## 1. API Connections Test\n"]
+   "source": [
+    "## 1. API Connections Test\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
+   "id": "0206ae7f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'dotenv'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# Load environment variables\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mdotenv\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m load_dotenv\n\u001b[32m      3\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mos\u001b[39;00m\n\u001b[32m      5\u001b[39m load_dotenv()\n",
+      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'dotenv'"
+     ]
+    }
+   ],
    "source": [
     "# Load environment variables\n",
     "from dotenv import load_dotenv\n",
@@ -59,12 +74,16 @@
   },
   {
    "cell_type": "markdown",
+   "id": "469180ca",
    "metadata": {},
-   "source": ["## 2. Wallet PnL Analysis\n"]
+   "source": [
+    "## 2. Wallet PnL Analysis\n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "27129b8b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +144,7 @@
     "        pnl = sum([(tx.get('amountOutMin', 0) * tx.get('price', 1)) - tx.get('amountIn', 0) for tx in swaps])\n",
     "        entries.append({'chain': 'SOL', 'wallet': w, 'pnl': pnl, 'tx_count': len(swaps)})\n",
     "    pnl_summary[label] = pd.DataFrame(entries)\n",
-    "    print(f\"\\n## {label}\")\\n",
+    "    print(f\"\\n## {label}\")\\n\n",
     "    display(pnl_summary[label])\n"
    ]
   }
@@ -137,8 +156,16 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": ""
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
